@@ -80,11 +80,11 @@ case "${1}" in
 
 		boot_mesg -n " /var/lock" ${NORMAL}
 		cd /var/lock &&
-		find . -type f ! -newer /proc -exec rm -f {} \; || failed=1
+		find . -type f ! -exec rm -f {} \; || failed=1
 
 		boot_mesg " /var/run" ${NORMAL}
 		cd /var/run &&
-		find . ! -type d ! -name utmp ! -newer /proc \
+		find . ! -type d ! -name utmp \
 			-exec rm -f {} \; || failed=1
 		> /var/run/utmp
 		if grep -q '^utmp:' /etc/group ; then
